Bug 419786 - Link children associated with imagemaps do not implement the nsIAccessibleHyperLink interface, r=ginn.chen, aaronlev, a=beltzner